# patchelf

./: meson.build  meson_options.txt
tests/: meson.build
